--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -1,18 +1,18 @@
 <html>
 
-
-    <h1>
-Sabiens      </h1>
 <!--The content below is only a placeholder and can be replaced.-->
 <nav style="background-color:#ffff;">
   <div class="nav-wrapper">
     <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <li><a href="sass.html">Sistemas</a></li>
+      <li><a routerLink="/cadastroSistema" >Sistemas</a></li>
       <li><a href="badges.html">Login</a></li>
       <li><a href="collapsible.html">Cadastro</a></li>
     </ul>
   </div>
 </nav>
+<router-outlet></router-outlet>
+
+
 
 </html>
 
