--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -1,10 +1,10 @@
 <html>
 
 <!--The content below is only a placeholder and can be replaced.-->
-<nav style="background-color:#ffff;">
+<nav>
   <div class="nav-wrapper">
     <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <li><a routerLink="/cadastroSistema" >Sistemas</a></li>
+      <li><a routerLink="/cadastroConteudo" >Cadastrar Conteudo</a></li>
       <li><a href="badges.html">Login</a></li>
       <li><a href="collapsible.html">Cadastro</a></li>
     </ul>
