--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -4,12 +4,13 @@
 <nav>
   <div class="nav-wrapper">
     <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <li><a routerLink="/cadastroConteudo" >Cadastrar Conteudo</a></li>
-      <li><a href="badges.html">Login</a></li>
-      <li><a href="collapsible.html">Cadastro</a></li>
+      <li><a routerLink="/cadastroConteudo">Cadastrar Conteudo</a></li>
+      <li><a routerLink="/cadastroConteudo">Login</a></li>
+      <li><a routerLink="/cadastroConteudo">Cadastro</a></li>
     </ul>
   </div>
 </nav>
+
 <router-outlet></router-outlet>
 
 
