--- a/front-end/src/app/cadastroConteudo.component.html
+++ b/front-end/src/app/cadastroConteudo.component.html
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="input-field col s6">
             <input id="first_name2" type="text" class="validate">
-            <label class="active"   [(ngModel)]="contedo.titulo" for="first_name2">Título</label>
+            <label class="active" [(ngModel)]="conteudo.titulo" for="first_name2">Título</label>
             </div>
         </div>
         <div class="box">
