--- a/front-end/src/app/cadastroConteudo.component.html
+++ b/front-end/src/app/cadastroConteudo.component.html
@@ -4,8 +4,8 @@
             <h3 style="font-size:30px;color:#616161">Escolha um titulo:</h3>
         <div class="row">
             <div class="input-field col s6">
-            <input id="first_name2" type="text" class="validate">
-            <label class="active" [(ngModel)]="conteudo.titulo" for="first_name2">Título</label>
+            <input [(ngModel)]="titulo" id="first_name2" type="text" class="validate">
+            <label class="active"  for="first_name2">Título</label>
             </div>
         </div>
         <div class="box">
