--- a/front-end/src/app/cadastroConteudo.component.html
+++ b/front-end/src/app/cadastroConteudo.component.html
@@ -1,13 +1,24 @@
 <div class="container" style="margin-top:40px;">
         <h2 style="margin-bottom:30px;font-weight:700;">Cadastro do Conteudo</h2>
     <div class="forms">
-            <h3 style="font-size:30px;color:#616161">Escolha um titulo:</h3>
         <div class="row">
-            <div class="input-field col s6">
-            <input [(ngModel)]="titulo" id="first_name2" type="text" class="validate">
-            <label class="active"  for="first_name2">Título</label>
-            </div>
+            <h3 class="col s4" style="font-size:30px;color:#616161">Escolha um titulo:</h3> 
+            <h3 class="col s8" style="font-size:30px;color:#616161">Descreva brevemente o conteúdo:</h3>
         </div>
+        <div class="row">
+            <div class="input-field col s4">
+                <input [(ngModel)]="nome" name="titulo" id="first_name2" type="text" class="validate">
+                <label class="active"  for="first_name2">Título</label>
+            </div>
+
+            <div class="input-field col s8">
+                    <input [(ngModel)]="descricao"  name="descricao" id="first_name3" type="text" class="validate">
+                    <label class="active"  for="first_name2">Descrição</label>
+                    </div>
+            
+        </div>
+
+        
         <div class="box">
             <h3>introdução</h3>
         
@@ -15,7 +26,7 @@
                     <form  class="col s12">
                     <div class="row">
                         <div class="input-field col s12">
-                        <textarea id="textarea1" class="materialize-textarea"></textarea>
+                        <textarea  [(ngModel)]="introducao"  name="introducao"  id="textarea1" class="materialize-textarea"></textarea>
                         <label  for="textarea1">Introdução</label>
                         </div>
                     </div>
@@ -28,13 +39,13 @@
                     <form class="col s12">
                         <div class="row">
                             <div class="input-field col s12">
-                            <textarea id="textarea1" class="materialize-textarea"></textarea>
+                            <textarea [(ngModel)]="nomeTopico" name="nometopico" id="textarea2" class="materialize-textarea"></textarea>
                             <label for="textarea1">Titulo do tópico</label>
                             </div>
                         </div>
                         <div class="row">
                             <div class="input-field col s12">
-                            <textarea id="textarea1" class="materialize-textarea"></textarea>
+                            <textarea [(ngModel)]="descricaoTopico" name="descricaoTopico" class="materialize-textarea"></textarea>
                             <label for="textarea1">Descrição do tópico</label>
                             </div>
                         </div>
@@ -48,7 +59,7 @@
                     <form class="col s12">
                     <div class="row">
                         <div class="input-field col s12">
-                        <textarea id="textarea1" class="materialize-textarea"></textarea>
+                        <textarea [(ngModel)]="conclusao" name="conclusao" id="textarea4" class="materialize-textarea"></textarea>
                         <label for="textarea1">Escreva sobre conclusão e comentários</label>
                         </div>
                     </div>
@@ -56,7 +67,7 @@
             </div>
         </div>
 
-        <a (click)="criarConteudo(conteudo)" style="margin-left:400px; margin-top:50px;margin-bottom:100px"class="waves-effect waves-light btn">ENVIAR</a>
+        <a (click)="gravar(conteudo)" style="margin-left:400px; margin-top:50px;margin-bottom:100px"class="waves-effect waves-light btn">ENVIAR</a>
     </div>   
 </div>
 
