finalizando trabalhos com arrays e cadastroConteudo

--- a/front-end/src/app/cadastroConteudo.component.html
+++ b/front-end/src/app/cadastroConteudo.component.html
@@ -7,7 +7,7 @@
         </div>
         <div class="row">
             <div class="input-field col s4">
-                <input [(ngModel)]="nome" name="titulo" id="first_name2" type="text" class="validate">
+                <input [(ngModel)]="titulo" name="titulo" id="first_name2" type="text" class="validate">
                 <label class="active"  for="first_name2">Título</label>
             </div>
 
@@ -65,9 +65,9 @@
                     </div>
                     </form>
             </div>
-        </div>
-
-        <a (click)="gravar(conteudo)" style="margin-left:400px; margin-top:50px;margin-bottom:100px"class="waves-effect waves-light btn">ENVIAR</a>
+        </div>        
+        <a (click)="gravar()" style="margin-left:400px; margin-top:50px;margin-bottom:100px"class="waves-effect waves-light btn">ENVIAR</a>
+        
     </div>   
 </div>
 
