--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -1,10 +1,12 @@
+
 <html>
 
 <!--The content below is only a placeholder and can be replaced.-->
 <nav>
   <div class="nav-wrapper">
+    <a  style=" color:#f44336;margin-left:40px;font-size:30px;" href="#" routerLink="/app-root" class="brand-logo">Sabiens</a>      
     <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <li><a routerLink="/cadastroConteudo">Cadastrar Conteudo</a></li>
+      <li><a routerLink="/sistemas">Sistemas do Corpo Humano</a></li>
       <li><a routerLink="/cadastroConteudo">Login</a></li>
       <li><a routerLink="/cadastroConteudo">Cadastro</a></li>
     </ul>
