--- a/front-end/src/app/sistemasCorpo.component.html
+++ b/front-end/src/app/sistemasCorpo.component.html
@@ -2,6 +2,6 @@
 <br>
 <h3>Sistema Digestório</h3> 
 <br>
-<a class="btn" routerLink="/cadastroConteudo">Cadastrar Conteudo</a>
+<a class="btn" name='botaoAdd' routerLink="/cadastroConteudo">Cadastrar Conteudo</a>
 <br>
 <hr>
